chore: upgrade to JDK 25 LTS (source/target 25, bytebuddy experimental)